# ros2_ai_control_bridge

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  GAZEBO_INTEGRATION_GUIDE.md  LICENSE  MODEL_INTEGRATION.md  QUICK_START_DEPLOYMENT.md  README.md  ROBOT_DEPLOYMENT_GUIDE.md  SUBMISSION_STATUS.md
ai_control_bridge_controller/: CMakeLists.txt  README.md  ai_control_bridge_controller_plugin.xml  package.xml
ai_control_bridge_controller/config/: bcr_arm_gazebo.yaml  bcr_arm_real.yaml
ai_control_bridge_controller/include/ai_control_bridge_controller/: buffer.hpp  controller.hpp  safety.hpp  trajectory.hpp
ai_control_bridge_controller/launch/: ai_control_bridge_real_robot.launch.py  ai_control_bridge_simulation.launch.py  bcr_arm_gazebo_integrated.launch.py
ai_control_bridge_controller/src/: buffer.cpp  controller.cpp  safety.cpp  trajectory.cpp
ai_control_bridge_core/: CMakeLists.txt  LICENSE  README.md  package.xml
ai_control_bridge_core/include/: ai_control_bridge_core.hpp
ai_control_bridge_core/include/ai_control_bridge_core/: controller_bridge.hpp  inference_core.hpp  postprocessor_core.hpp  preprocessor_core.hpp  realtime_buffer.hpp  safety_constraints.hpp  trajectory_generator.hpp
ai_control_bridge_core/include/ai_control_bridge_core/impl/: minimum_jerk_trajectory.hpp  realtime_safe_buffer.hpp  safety_filter.hpp
ai_control_bridge_core/launch/: ai_bridge_test.launch.py
ai_control_bridge_core/src/: calibration_utility.py  diagnostics_node.py
ai_control_bridge_hardware/: CMakeLists.txt  README.md  package.xml
ai_control_bridge_hardware/include/ai_control_bridge_hardware/: bcr_arm_hardware_interface.hpp
ai_control_bridge_hardware/src/: bcr_arm_hardware_interface.cpp
ai_inference_processor/: CMakeLists.txt  README.md  package.xml
ai_inference_processor/src/: inference_processor.cpp
bcr_arm/: README.md
bcr_arm/bcr_arm_moveit_config/config/: ai_control_bridge_controllers.yaml
